<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicialActivity"
    android:id="@+id/mainLayout"
    android:background="@color/colorBackground"
    android:clickable="true">


    <TextView
        android:text="@string/btText"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark"
        android:id="@+id/btText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/btState"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/btState"
        android:layout_below="@+id/btText"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonListDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSelectFromList"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/buttonOff"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/buttonSearchDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSearchDevices"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/buttonListDevices"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/buttonOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonOff"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/btState"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btState" />

    <Button
        android:id="@+id/buttonOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonOn"
        android:layout_alignBaseline="@+id/buttonOff"
        android:layout_alignBottom="@+id/buttonOff"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btState" />

    <ListView
        android:id="@+id/deviceList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonSearchDevices" />


</RelativeLayout>
